用户发送验证码、邮箱、推送ＯＫ

--- a/guns-vip-main/src/main/webapp/pages/note/qxNotice/qxNotice.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxNotice/qxNotice.html
@@ -1,4 +1,4 @@
-@layout("/common/_container.html",{js:["/assets/note/qxNotification/qxNotification.js"]}){
+@layout("/common/_container.html",{js:["/assets/note/qxNotice/qxNotice.js"]}){
 
 <div class="layui-body-header">
     <span class="layui-body-header-title">系统通知表管理</span>
@@ -21,7 +21,7 @@
                             </div>
                         </div>
                     </div>
-                    <table class="layui-table" id="qxNotificationTable" lay-filter="qxNotificationTable"></table>
+                    <table class="layui-table" id="qxNoticeTable" lay-filter="qxNoticeTable"></table>
                 </div>
             </div>
         </div>
