--- a/guns-vip-main/src/main/webapp/pages/note/qxNotice/qxNotice_add.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxNotice/qxNotice_add.html
@@ -1,6 +1,6 @@
-@layout("/common/_form.html",{js:["/assets/note/qxNotification/qxNotification_edit.js"]}){
+@layout("/common/_form.html",{js:["/assets/note/qxNotice/qxNotice_add.js"]}){
 
-<form class="layui-form" id="qxNotificationForm" lay-filter="qxNotificationForm">
+<form class="layui-form" id="qxNoticeForm" lay-filter="qxNoticeForm">
     <div class="layui-fluid" style="padding-bottom: 75px;">
         <div class="layui-card">
             <div class="layui-card-header">基本信息</div>
@@ -44,9 +44,9 @@
                         </div>
                     </div>
                     <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">用户ID<span style="color: red;">*</span></label>
+                        <label class="layui-form-label">用户账号<span style="color: red;">*</span></label>
                         <div class="layui-input-block">
-                            <input id="userId" name="userId" placeholder="请输入用户ID" type="text" class="layui-input" lay-verify="required" required/>
+                            <input id="account" name="account" placeholder="请输入用户账号" type="text" class="layui-input" lay-verify="required" required/>
                         </div>
                     </div>
                     <div class="layui-inline layui-col-md12">
@@ -56,9 +56,27 @@
                         </div>
                     </div>
                     <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">已读<span style="color: red;">*</span></label>
+                        <label class="layui-form-label">消息分类 消息分类<span style="color: red;">*</span></label>
                         <div class="layui-input-block">
-                            <input id="readed" name="readed" placeholder="请输入已读" type="text" class="layui-input" lay-verify="required" required/>
+                            <input id="tag" name="tag" placeholder="请输入消息分类 消息分类" type="text" class="layui-input" lay-verify="required" required/>
+                        </div>
+                    </div>
+                    <div class="layui-inline layui-col-md12">
+                        <label class="layui-form-label">通知类型 通知类型：0-短信，1-邮箱， 2-推送<span style="color: red;">*</span></label>
+                        <div class="layui-input-block">
+                            <input id="type" name="type" placeholder="请输入通知类型 通知类型：0-短信，1-邮箱， 2-推送" type="text" class="layui-input" lay-verify="required" required/>
+                        </div>
+                    </div>
+                    <div class="layui-inline layui-col-md12">
+                        <label class="layui-form-label">发送状态 是否发送：0-未发送，1-已发送<span style="color: red;">*</span></label>
+                        <div class="layui-input-block">
+                            <input id="statusSend" name="statusSend" placeholder="请输入发送状态 是否发送：0-未发送，1-已发送" type="text" class="layui-input" lay-verify="required" required/>
+                        </div>
+                    </div>
+                    <div class="layui-inline layui-col-md12">
+                        <label class="layui-form-label">已读状态 读取状态：1-是.0-未读<span style="color: red;">*</span></label>
+                        <div class="layui-input-block">
+                            <input id="statusRead" name="statusRead" placeholder="请输入已读状态 读取状态：1-是.0-未读" type="text" class="layui-input" lay-verify="required" required/>
                         </div>
                     </div>
                 </div>
