--- a/guns-vip-main/src/main/webapp/pages/note/qxNoteComment/qxNoteComment_add.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxNoteComment/qxNoteComment_add.html
@@ -46,7 +46,7 @@
                     <div class="layui-inline layui-col-md12">
                         <label class="layui-form-label">推文ID<span style="color: red;">*</span></label>
                         <div class="layui-input-block">
-                            <input id="tweetId" name="tweetId" placeholder="请输入推文ID" type="text" class="layui-input" lay-verify="required" required/>
+                            <input id="noteId" name="noteId" placeholder="请输入推文ID" type="text" class="layui-input" lay-verify="required" required/>
                         </div>
                     </div>
                     <div class="layui-inline layui-col-md12">
