--- a/guns-vip-main/src/main/webapp/pages/note/qxInvite/qxInvite_add.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxInvite/qxInvite_add.html
@@ -38,6 +38,12 @@
                         </div>
                     </div>
                     <div class="layui-inline layui-col-md12">
+                        <label class="layui-form-label">约单单号<span style="color: red;">*</span></label>
+                        <div class="layui-input-block">
+                            <input id="sn" name="sn" placeholder="请输入约单单号" type="text" class="layui-input" lay-verify="required" required/>
+                        </div>
+                    </div>
+                    <div class="layui-inline layui-col-md12">
                         <label class="layui-form-label">删除标识<span style="color: red;">*</span></label>
                         <div class="layui-input-block">
                             <input id="deleted" name="deleted" placeholder="请输入删除标识" type="text" class="layui-input" lay-verify="required" required/>
@@ -80,18 +86,6 @@
                         </div>
                     </div>
                     <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">地点<span style="color: red;">*</span></label>
-                        <div class="layui-input-block">
-                            <input id="location" name="location" placeholder="请输入地点" type="text" class="layui-input" lay-verify="required" required/>
-                        </div>
-                    </div>
-                    <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">城市编号<span style="color: red;">*</span></label>
-                        <div class="layui-input-block">
-                            <input id="cityNo" name="cityNo" placeholder="请输入城市编号" type="text" class="layui-input" lay-verify="required" required/>
-                        </div>
-                    </div>
-                    <div class="layui-inline layui-col-md12">
                         <label class="layui-form-label">经度<span style="color: red;">*</span></label>
                         <div class="layui-input-block">
                             <input id="longitude" name="longitude" placeholder="请输入经度" type="text" class="layui-input" lay-verify="required" required/>
@@ -104,15 +98,39 @@
                         </div>
                     </div>
                     <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">状态 0-待配对;1-已配对;2-进行中;3-已完成;4-已取消;5-已投诉<span style="color: red;">*</span></label>
+                        <label class="layui-form-label">省<span style="color: red;">*</span></label>
                         <div class="layui-input-block">
-                            <input id="status" name="status" placeholder="请输入状态 0-待配对;1-已配对;2-进行中;3-已完成;4-已取消;5-已投诉" type="text" class="layui-input" lay-verify="required" required/>
+                            <input id="province" name="province" placeholder="请输入省" type="text" class="layui-input" lay-verify="required" required/>
                         </div>
                     </div>
                     <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">约单单号<span style="color: red;">*</span></label>
+                        <label class="layui-form-label">市<span style="color: red;">*</span></label>
                         <div class="layui-input-block">
-                            <input id="sn" name="sn" placeholder="请输入约单单号" type="text" class="layui-input" lay-verify="required" required/>
+                            <input id="city" name="city" placeholder="请输入市" type="text" class="layui-input" lay-verify="required" required/>
+                        </div>
+                    </div>
+                    <div class="layui-inline layui-col-md12">
+                        <label class="layui-form-label">区县<span style="color: red;">*</span></label>
+                        <div class="layui-input-block">
+                            <input id="district" name="district" placeholder="请输入区县" type="text" class="layui-input" lay-verify="required" required/>
+                        </div>
+                    </div>
+                    <div class="layui-inline layui-col-md12">
+                        <label class="layui-form-label">街道名称<span style="color: red;">*</span></label>
+                        <div class="layui-input-block">
+                            <input id="street" name="street" placeholder="请输入街道名称" type="text" class="layui-input" lay-verify="required" required/>
+                        </div>
+                    </div>
+                    <div class="layui-inline layui-col-md12">
+                        <label class="layui-form-label">门牌号码<span style="color: red;">*</span></label>
+                        <div class="layui-input-block">
+                            <input id="streetNumber" name="streetNumber" placeholder="请输入门牌号码" type="text" class="layui-input" lay-verify="required" required/>
+                        </div>
+                    </div>
+                    <div class="layui-inline layui-col-md12">
+                        <label class="layui-form-label">状态 0-待配对;1-已配对;2-进行中;3-已完成;4-已取消;5-已投诉<span style="color: red;">*</span></label>
+                        <div class="layui-input-block">
+                            <input id="status" name="status" placeholder="请输入状态 0-待配对;1-已配对;2-进行中;3-已完成;4-已取消;5-已投诉" type="text" class="layui-input" lay-verify="required" required/>
                         </div>
                     </div>
                 </div>
