--- a/guns-vip-main/src/main/webapp/pages/note/qxInvite/qxInvite_edit.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxInvite/qxInvite_edit.html
@@ -133,6 +133,12 @@
                             <input id="status" name="status" placeholder="请输入状态 0-待配对;1-已配对;2-进行中;3-已完成;4-已取消;5-已投诉" type="text" class="layui-input" lay-verify="required" required/>
                         </div>
                     </div>
+                    <div class="layui-inline layui-col-md12">
+                        <label class="layui-form-label">约单方式<span style="color: red;">*</span></label>
+                        <div class="layui-input-block">
+                            <input id="inviteWay" name="inviteWay" placeholder="" type="text" class="layui-input" lay-verify="required" required/>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
