--- a/guns-vip-main/src/main/webapp/pages/note/qxDateType/qxDateType_edit.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxDateType/qxDateType_edit.html
@@ -43,6 +43,12 @@
                             <input id="name" name="name" placeholder="请输入名称" type="text" class="layui-input" lay-verify="required" required/>
                         </div>
                     </div>
+                    <div class="layui-inline layui-col-md12">
+                        <label class="layui-form-label">排序<span style="color: red;">*</span></label>
+                        <div class="layui-input-block">
+                            <input id="orderNo" name="orderNo" placeholder="请输入排序" type="text" class="layui-input" lay-verify="required" required/>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
