--- a/guns-vip-main/src/main/webapp/pages/note/qxInvite/qxInvite_add.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxInvite/qxInvite_add.html
@@ -134,9 +134,15 @@
                         </div>
                     </div>
                     <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">约单方式<span style="color: red;">*</span></label>
+                        <label class="layui-form-label">约单方式：0-单独约；1-报名约<span style="color: red;">*</span></label>
                         <div class="layui-input-block">
-                            <input id="inviteWay" name="inviteWay" placeholder="" type="text" class="layui-input" lay-verify="required" required/>
+                            <input id="inviteWay" name="inviteWay" placeholder="请输入约单方式：0-单独约；1-报名约" type="text" class="layui-input" lay-verify="required" required/>
+                        </div>
+                    </div>
+                    <div class="layui-inline layui-col-md12">
+                        <label class="layui-form-label">约单描述<span style="color: red;">*</span></label>
+                        <div class="layui-input-block">
+                            <input id="content" name="content" placeholder="请输入约单描述" type="text" class="layui-input" lay-verify="required" required/>
                         </div>
                     </div>
                 </div>
