--- a/guns-vip-main/src/main/webapp/pages/note/qxInviteApply/qxInviteApply_edit.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxInviteApply/qxInviteApply_edit.html
@@ -56,9 +56,9 @@
                         </div>
                     </div>
                     <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">是否选中<span style="color: red;">*</span></label>
+                        <label class="layui-form-label">状态：0-待确定；1-已选中；2-未选中<span style="color: red;">*</span></label>
                         <div class="layui-input-block">
-                            <input id="choosed" name="choosed" placeholder="请输入是否选中" type="text" class="layui-input" lay-verify="required" required/>
+                            <input id="status" name="status" placeholder="请输入状态：0-待确定；1-已选中；2-未选中" type="text" class="layui-input" lay-verify="required" required/>
                         </div>
                     </div>
                 </div>
