--- a/guns-vip-main/src/main/webapp/pages/note/qxPlatformLog/qxPlatformLog_edit.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxPlatformLog/qxPlatformLog_edit.html
@@ -56,9 +56,9 @@
                         </div>
                     </div>
                     <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">流水类型 0-购买礼物汇入<span style="color: red;">*</span></label>
+                        <label class="layui-form-label">流水类型：0-充值购买金币汇入；1-金币提现支出<span style="color: red;">*</span></label>
                         <div class="layui-input-block">
-                            <input id="type" name="type" placeholder="请输入流水类型 0-购买礼物汇入" type="text" class="layui-input" lay-verify="required" required/>
+                            <input id="type" name="type" placeholder="请输入流水类型：0-充值购买金币汇入；1-金币提现支出" type="text" class="layui-input" lay-verify="required" required/>
                         </div>
                     </div>
                     <div class="layui-inline layui-col-md12">
