--- a/guns-vip-main/src/main/webapp/pages/note/qxProduct/qxProduct_add.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxProduct/qxProduct_add.html
@@ -76,7 +76,7 @@
                     <div class="layui-inline layui-col-md12">
                         <label class="layui-form-label">库存数量<span style="color: red;">*</span></label>
                         <div class="layui-input-block">
-                            <input id="untitled" name="untitled" placeholder="请输入库存数量" type="text" class="layui-input" lay-verify="required" required/>
+                            <input id="stock" name="stock" placeholder="请输入库存数量" type="text" class="layui-input" lay-verify="required" required/>
                         </div>
                     </div>
                 </div>
