--- a/guns-vip-main/src/main/webapp/pages/note/qxUser/qxUser_edit.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxUser/qxUser_edit.html
@@ -92,9 +92,27 @@
                         </div>
                     </div>
                     <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">金币余额<span style="color: red;">*</span></label>
+                        <label class="layui-form-label">金币余额（可提现）<span style="color: red;">*</span></label>
                         <div class="layui-input-block">
-                            <input id="balance" name="balance" placeholder="请输入金币余额" type="text" class="layui-input" lay-verify="required" required/>
+                            <input id="balance" name="balance" placeholder="请输入金币余额（可提现）" type="text" class="layui-input" lay-verify="required" required/>
+                        </div>
+                    </div>
+                    <div class="layui-inline layui-col-md12">
+                        <label class="layui-form-label">冻结余额（不可提现）<span style="color: red;">*</span></label>
+                        <div class="layui-input-block">
+                            <input id="freeze" name="freeze" placeholder="请输入冻结余额（不可提现）" type="text" class="layui-input" lay-verify="required" required/>
+                        </div>
+                    </div>
+                    <div class="layui-inline layui-col-md12">
+                        <label class="layui-form-label">我的邀请码<span style="color: red;">*</span></label>
+                        <div class="layui-input-block">
+                            <input id="inviteCode" name="inviteCode" placeholder="请输入我的邀请码" type="text" class="layui-input" lay-verify="required" required/>
+                        </div>
+                    </div>
+                    <div class="layui-inline layui-col-md12">
+                        <label class="layui-form-label">邀请人ID<span style="color: red;">*</span></label>
+                        <div class="layui-input-block">
+                            <input id="parentId" name="parentId" placeholder="请输入邀请人ID" type="text" class="layui-input" lay-verify="required" required/>
                         </div>
                     </div>
                 </div>
