--- a/guns-vip-main/src/main/webapp/pages/note/qxWithdrawLog/qxWithdrawLog_edit.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxWithdrawLog/qxWithdrawLog_edit.html
@@ -44,6 +44,12 @@
                         </div>
                     </div>
                     <div class="layui-inline layui-col-md12">
+                        <label class="layui-form-label">订单号<span style="color: red;">*</span></label>
+                        <div class="layui-input-block">
+                            <input id="sn" name="sn" placeholder="请输入订单号" type="text" class="layui-input" lay-verify="required" required/>
+                        </div>
+                    </div>
+                    <div class="layui-inline layui-col-md12">
                         <label class="layui-form-label">用户ID<span style="color: red;">*</span></label>
                         <div class="layui-input-block">
                             <input id="userId" name="userId" placeholder="请输入用户ID" type="text" class="layui-input" lay-verify="required" required/>
