--- a/guns-vip-main/src/main/webapp/pages/note/qxUser/qxUser.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxUser/qxUser.html
@@ -32,4 +32,8 @@
     <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="edit">修改</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="delete">删除</a>
 </script>
+
+<script type="text/html" id="statusTpl">
+	<input type="checkbox" lay-filter="status" value="{{d.id}}" lay-skin="switch" lay-text="正常|禁用" {{d.status=='0'?'checked':''}} />
+</script>
 @}
