用户管理，基本OK，其他模块hurry up :)

--- a/guns-vip-main/src/main/webapp/pages/note/qxUser/qxUser_edit.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxUser/qxUser_edit.html
@@ -38,6 +38,16 @@
                         	<input type="radio" name="sex" value="1" title="女" />
                         </div>
                     </div>
+                    <div class="layui-form-item">
+                    	<label class="layui-form-label">头像</label>
+                    	<div class="layui-input-block">
+                    		<input id="avatar" name="avatar" type="hidden" class="layui-input"/>
+                    		<button type="button" class="layui-btn layui-btn-sm" id="avatarBtn"><i class="layui-icon"></i>选择图片</button>
+                    		<div class="layui-upload-list">
+                    			<img class="layui-upload-img" id="img1" lay-filter="img1" width="92px" height="92px">
+                    		</div>
+                    	</div>
+                    </div>
                     <div class="layui-inline layui-col-md12">
                         <label class="layui-form-label">信用分</label>
                         <div class="layui-input-block">
