--- a/guns-vip-main/src/main/webapp/pages/note/qxUser/qxUser.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxUser/qxUser.html
@@ -12,7 +12,10 @@
                     <div class="layui-form toolbar">
                         <div class="layui-form-item">
                             <div class="layui-inline">
-                                <input id="condition" class="layui-input" type="text" placeholder="名称"/>
+                                <input id="nickname" class="layui-input" type="text" placeholder="名称"/>
+                            </div>
+                            <div class="layui-inline">
+                            	<input id="mobile" class="layui-input" type="text" placeholder="手机" />
                             </div>
                             <div class="layui-inline">
                                 <button id="btnSearch" class="layui-btn icon-btn"><i class="layui-icon">&#xe615;</i>搜索</button>
