商品后台管理OK

--- a/guns-vip-main/src/main/webapp/pages/note/qxProduct/qxProduct.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxProduct/qxProduct.html
@@ -12,7 +12,12 @@
                     <div class="layui-form toolbar">
                         <div class="layui-form-item">
                             <div class="layui-inline">
-                                <input id="condition" class="layui-input" type="text" placeholder="名称"/>
+                                <input id="productName" class="layui-input" type="text" placeholder="商品名称"/>
+                            </div>
+                            <div class="layui-inline">
+                            	<select id="categoryId">
+                            		<option value="">请选择类型</option>
+                            	</select>
                             </div>
                             <div class="layui-inline">
                                 <button id="btnSearch" class="layui-btn icon-btn"><i class="layui-icon">&#xe615;</i>搜索</button>
