--- a/guns-vip-main/src/main/webapp/pages/note/qxProduct/qxProduct_add.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxProduct/qxProduct_add.html
@@ -8,46 +8,11 @@
                 <div class="layui-form-item layui-row">
                     <input name="id" type="hidden"/>
                     <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">乐观锁<span style="color: red;">*</span></label>
-                        <div class="layui-input-block">
-                            <input id="version" name="version" placeholder="请输入乐观锁" type="text" class="layui-input" lay-verify="required" required/>
-                        </div>
-                    </div>
-                    <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">创建人<span style="color: red;">*</span></label>
-                        <div class="layui-input-block">
-                            <input id="createdBy" name="createdBy" placeholder="请输入创建人" type="text" class="layui-input" lay-verify="required" required/>
-                        </div>
-                    </div>
-                    <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">创建时间<span style="color: red;">*</span></label>
-                        <div class="layui-input-block">
-                            <input id="createdTime" name="createdTime" placeholder="请输入创建时间" type="text" class="layui-input" lay-verify="required" required/>
-                        </div>
-                    </div>
-                    <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">更新人<span style="color: red;">*</span></label>
-                        <div class="layui-input-block">
-                            <input id="updatedBy" name="updatedBy" placeholder="请输入更新人" type="text" class="layui-input" lay-verify="required" required/>
-                        </div>
-                    </div>
-                    <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">更新时间<span style="color: red;">*</span></label>
-                        <div class="layui-input-block">
-                            <input id="updatedTime" name="updatedTime" placeholder="请输入更新时间" type="text" class="layui-input" lay-verify="required" required/>
-                        </div>
-                    </div>
-                    <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">删除标识<span style="color: red;">*</span></label>
-                        <div class="layui-input-block">
-                            <input id="deleted" name="deleted" placeholder="请输入删除标识" type="text" class="layui-input" lay-verify="required" required/>
-                        </div>
-                    </div>
-                    <div class="layui-inline layui-col-md12">
                         <label class="layui-form-label">品类ID<span style="color: red;">*</span></label>
                         <div class="layui-input-block">
-                            <input id="categoryId" name="categoryId" placeholder="请输入品类ID" type="text" class="layui-input" lay-verify="required" required/>
-                        </div>
+							<select name="categoryId" id="categoryId" lay-filter="categoryId">
+							</select>                        
+						</div>
                     </div>
                     <div class="layui-inline layui-col-md12">
                         <label class="layui-form-label">商品名称<span style="color: red;">*</span></label>
@@ -55,17 +20,29 @@
                             <input id="productName" name="productName" placeholder="请输入商品名称" type="text" class="layui-input" lay-verify="required" required/>
                         </div>
                     </div>
-                    <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">轮播图片列表<span style="color: red;">*</span></label>
+                    <input type="hidden" id="headImages" name="headImages" class="head_images_show" value="" >
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">轮播图片<span style="color: red;">*</span></label>
                         <div class="layui-input-block">
-                            <input id="headImages" name="headImages" placeholder="请输入轮播图片列表" type="text" class="layui-input" lay-verify="required" required/>
+                        	<div class="layui-upload">
+	                        	<button type="button" class="layui-btn" id="head_images_upload">上传轮播图</button>
+	                        	<blockquote class="layui-elem-quote layui-quote-nm" style="margin-top: 10px;">
+	                        		<div class="layui-upload-list" id="head_images_slide_show"></div>
+	                        	</blockquote>
+                        	</div>
                         </div>
                     </div>
-                    <div class="layui-inline layui-col-md12">
-                        <label class="layui-form-label">详情图片列表<span style="color: red;">*</span></label>
-                        <div class="layui-input-block">
-                            <input id="detailImages" name="detailImages" placeholder="请输入详情图片列表" type="text" class="layui-input" lay-verify="required" required/>
-                        </div>
+                    <input type="hidden" id="detailImages" name="detailImages" class="detail_images_show" value="">
+                    <div class="layui-form-item">
+                    	<label class="layui-form-label">详情图片<span style="color: red;">*</span></label>
+                    	<div class="layui-input-block">
+                    		<div class="layui-upload">
+                    			<button type="button" class="layui-btn" id="detail_images_upload">上传详情图</button>
+                    			<blockquote class="layui-elem-quote layui-quote-nm" style="margin-top: 10px;">
+                    				<div class="layui-upload-list" id="detail_images_slide_show"></div>
+                    			</blockquote>
+                    		</div>
+                    	</div>
                     </div>
                     <div class="layui-inline layui-col-md12">
                         <label class="layui-form-label">兑换金币价格<span style="color: red;">*</span></label>
