--- a/guns-vip-main/src/main/webapp/pages/note/qxGift/qxGift.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxGift/qxGift.html
@@ -1,5 +1,12 @@
 @layout("/common/_container.html",{js:["/assets/note/qxGift/qxGift.js"]}){
 
+<style>
+<!--
+.layui-table-cell{
+height:auto !important;
+}
+-->
+</style>
 <div class="layui-body-header">
     <span class="layui-body-header-title">礼物表管理</span>
 </div>
