--- a/guns-vip-main/src/main/webapp/pages/note/qxGift/qxGift.html
+++ b/guns-vip-main/src/main/webapp/pages/note/qxGift/qxGift.html
@@ -1,4 +1,4 @@
-@layout("/common/_container.html",{js:["/assets/note/qxGift/qxGift.js"]}){
+@layout("/common/_container.html",{js:["/assets/note/qxGift/qxGift.js"],css:["/assets/form/form.css"]}){
 
 <style>
 <!--
