--- a/guns-base-support/guns-sys/src/main/webapp/pages/login.html
+++ b/guns-base-support/guns-sys/src/main/webapp/pages/login.html
@@ -79,24 +79,27 @@
                     </div>
                 </div>
                 @}
+                <!-- 
                 <div class="layui-form-item">
                     <a href="javascript:;" class="layui-link">帐号注册</a>
                     <a href="javascript:;" class="layui-link pull-right">忘记密码？</a>
                 </div>
+                -->
                 <div class="layui-form-item">
                     <button class="layui-btn layui-btn-fluid" id="submit">登 录</button>
                 </div>
+                <!-- 
                 <div class="layui-form-item login-other">
                     <label>第三方登录</label>
                     <a href="${ctxPath}/oauth/render/qq"><i class="layui-icon layui-icon-login-qq"></i></a>
                     <a href="${ctxPath}/oauth/render/gitee"><img style="height: 28px;width: 28px" src="${ctxPath}/assets/expand/images/git.png"></a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
 
     <div class="login-footer">
-        <p>© 2019 <a href="https://www.stylefeng.cn" target="_blank">stylefeng版权所有</a></p>
+        <p>© 2019 <a href="https://www.stylefeng.cn" target="_blank">无锡千与千寻网络科技有限公司版权所有</a></p>
     </div>
 </div>
 
