--- a/guns-base-support/guns-sys/src/main/webapp/pages/login.html
+++ b/guns-base-support/guns-sys/src/main/webapp/pages/login.html
@@ -99,7 +99,7 @@
     </div>
 
     <div class="login-footer">
-        <p>© 2019 <a href="https://www.stylefeng.cn" target="_blank">无锡千与千寻网络科技有限公司版权所有</a></p>
+        <p>© 2019 <a href="#">无锡千与千寻网络科技有限公司版权所有</a></p>
     </div>
 </div>
 
