删除登陆页默认账号和密码

--- a/guns-base-support/guns-sys/src/main/webapp/pages/login.html
+++ b/guns-base-support/guns-sys/src/main/webapp/pages/login.html
@@ -55,13 +55,13 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">账号</label>
                     <div class="layui-input-block">
-                        <input name="username" id="username" placeholder="默认账号：admin" type="text" lay-verify="required" class="layui-input">
+                        <input name="username" id="username" placeholder="" type="text" lay-verify="required" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-form-item">
                     <label class="layui-form-label">密码</label>
                     <div class="layui-input-block">
-                        <input name="password" id="password" placeholder="默认密码：111111" type="password" lay-verify="required" class="layui-input">
+                        <input name="password" id="password" placeholder="" type="password" lay-verify="required" class="layui-input">
                     </div>
                 </div>
                 @if(kaptcha.getKaptchaOnOff() == true){
